--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
@@ -32,6 +33,5 @@
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3"
   },
-  "eslintConfig": {
-  }
+  "eslintConfig": {}
 }
