--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -3,13 +3,18 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: # Specify your branches here
-      - main # The 'main' branch
-      - 'releases/*' # The release branches
+    branches:
+      - main
+      - 'releases/*'
+
+concurrency:
+  group: qodana-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   qodana:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       contents: write
       pull-requests: write
@@ -17,12 +22,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
-          fetch-depth: 0  # a full history is required for pull request analysis
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2024.3
         with:
-          pr-mode: false
+          pr-mode: true  # 변경
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_110694910 }}
-          QODANA_ENDPOINT: 'https://qodana.cloud'
