--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@svgr/rollup": "^8.1.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
