--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.67.1",
+    "@tanstack/react-query-devtools": "^5.67.1",
     "@types/socket.io-client": "^1.4.36",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.9",
@@ -18,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.2",
